# w4on2

./: .gitignore  Cargo.toml  README.md  shell.nix  shell.windows.nix
.github/workflows/: build.yml
cli/: Cargo.toml
cli/src/: main.rs
example/: build.zig
example/src/: main.zig
example/src/songs/: w4on2_tests.mid  w4on2_tests.toml
plugin/: Cargo.toml
plugin/src/: lib.rs  standalone.rs  widgets.rs
runtime/: LICENSE  w4on2.c  w4on2.h
scripts/: protospan.js  run_standalone.sh  wsl_copy_plugin.sh
shared/: Cargo.toml  build.rs
shared/src/: bounce.rs  convert.rs  crunch.rs  lib.rs  runtime.rs  wasm4_apu.rs
